@@ -1,3 +1,9 @@
+2007-12-31  Brian Matherly <brian@gramps-project.org>
+	* src/Editors/EditFamily.py:
+	* src/DisplayModels/_PeopleModel.py:
+	* src/Filters/_GenericFilter.py:
+	Modifications so that GenericFilters can be applied to a PeopleModel.
+
 2007-12-31 Gary Burton <gary.burton@zen.co.uk>
 	* src/gen/db/base.py: added missing key for reference_key in mapbase and
 	_SIGBASE. Was preventing deleted notes being undone. Bug #1507.
